bugfix : swagger file shows query params even though no params are required (#165)
